--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -32,7 +32,7 @@ jobs:
           git config --local user.email "prasunil058@gmail.com"
           git config --local user.name "sunilprregmi"
           git add -A
-          git diff-index --quiet HEAD || git commit -a -m "scraped epg - $(date +'%Y-%m-%d')" --allow-empty
+          git diff-index --quiet HEAD || git commit -a -m "scraped json - $(date +'%Y-%m-%d')" --allow-empty
           
       - name: push changes
         uses: ad-m/github-push-action@v0.8.0
