--- a/.github/workflows/config.yml
+++ b/.github/workflows/config.yml
@@ -1,34 +1,41 @@
 name: YuppTV FTA JSON Saver
 
 on:
-  workflow_dispatch:
+  workflow_dispatch:  # Allows manual triggering
   schedule:
     - cron: '15 23 * * *'  # Runs every day at 5 AM
 
 jobs:
-  update-yupp-data:
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - name: checkout repo content
+        uses: actions/checkout@v4.1.1 # checkout the repository content to github runner
+
+      - name: setup python
+        uses: actions/setup-python@v5.0.0
         with:
-          python-version: '3.10'
-
-      - name: Install dependencies
+          python-version: '3.10.7' # install the python version needed
+          
+      - name: install python packages
         run: |
           python -m pip install --upgrade pip
-          pip install requests
-
-      - name: Fetch and replace YuppTV data
-        run: python yupp_fetch.py
-
-      - name: Commit and push changes
+          pip install -r requirements.txt
+          
+      - name: execute py script # run main.py
+        run: 
+            python ftayup.py
+          
+      - name: commit files
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add yupp-fta.json
-          git commit -m "Update YuppTV data - $(date -u +%Y-%m-%d)"  # Removed diff check
-          git push
+          git config --local user.email "prasunil058@gmail.com"
+          git config --local user.name "sunilprregmi"
+          git add -A
+          git diff-index --quiet HEAD || git commit -a -m "scraped json - $(date +'%Y-%m-%d')" --allow-empty
+          
+      - name: push changes
+        uses: ad-m/github-push-action@v0.8.0
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: main 
